--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "goodreads"]
 	path = goodreads
 	url = https://github.com/sefakilic/goodreads.git
+[submodule "Python-Bookshare-API-Wrapper"]
+	path = Python-Bookshare-API-Wrapper
+	url = https://github.com/benetech/Python-Bookshare-API-Wrapper/
